<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ToolBarStyle" />

    <ViewFlipper
        android:id="@+id/screenTypeViewFlipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/amountTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:theme="@style/TextLabel"
                app:hintTextAppearance="@style/CustomTextAppearance"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/amountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/checkout_amount"
                    android:inputType="numberDecimal"
                    android:text="1.12"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:theme="@style/TextLabel"
                app:hintTextAppearance="@style/CustomTextAppearance"
                app:layout_constraintTop_toBottomOf="@+id/amountTextInputLayout">

                <EditText
                    android:id="@+id/mailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/checkout_mail"
                    android:inputType="textEmailAddress"
                    android:text="bras.jeremy@gmail.com"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:theme="@style/TextLabel"
                app:hintTextAppearance="@style/CustomTextAppearance"
                app:layout_constraintTop_toBottomOf="@+id/mailTextInputLayout">

                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/checkout_phone_number"
                    android:inputType="phone"
                    android:text="+33658545085"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/checkoutButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/primary"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/checkout_checkout_button"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:src="@drawable/error_icon" />

            <TextView
                android:id="@+id/errorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="Error" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/tryAgainButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/primary"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/checkout_try_again_button"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/progress" />

            <TextView
                android:id="@+id/progressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="Error" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/receiptNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Receipt number: "
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/receiptNumberValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="16 €"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/receiptNumberLabel" />

            <TextView
                android:id="@+id/amountPaidLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Amount paid: "
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/receiptNumberLabel" />

            <TextView
                android:id="@+id/amountPaidValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="16 €"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@id/amountPaidLabel"
                app:layout_constraintTop_toTopOf="@id/amountPaidLabel" />

        </android.support.constraint.ConstraintLayout>

    </ViewFlipper>

</android.support.constraint.ConstraintLayout>